--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^11.0.25",
     "graphql": "^16.8.1",
     "mini-svg-data-uri": "^1.4.4",
+    "moneymanagent_webapp": "file:..",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
